fix: improve styling to make it more readable

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,19 @@
-.heading {
-  font-size: 48px;
-  font-weight: bold;
+:root {
+  font-size: 20px;
   font-family: Georgia, 'Times New Roman', Times, serif;
+  color: #303030;
+}
+
+h1, h2 {
+  font-weight: bold;
+}
+
+h1 {
+  font-size: 2.4rem;
+}
+
+h2 {
+  font-size: 1.6rem;
 }
 
 .input-container, .text-input {
@@ -9,6 +21,7 @@
 }
 
 .text-input {
+  color: #606060;
   width: 3.6em;
   font-family: Courier, monospace;
 }
